# openmp-tasking

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-JO.md  LICENSE.md  clang-build  preprocessor  tasking.h  test.cpp
experiments/: clang-rewrite.cpp
include/: tasking.h
lib/processor/: __init__.py  codebase.py  config.py
processor/: CMakeLists.txt  ExtractorVisitor.cpp  ExtractorVisitor.h  README.md  RewriterVisitor.cpp  RewriterVisitor.h  build.sh  main.cpp  prepare_build.sh  tasking.h
processor/src/: CMakeLists.txt  ExtractorVisitor.cpp  ExtractorVisitor.h  RewriterVisitor.cpp  RewriterVisitor.h  VisitorBase.cpp  VisitorBase.h  main.cpp
runtime/: .gitignore  CMakeLists.txt  Makefile  Runtime.cpp  Runtime.h  RuntimeTask.cpp  RuntimeTask.h  Worker.cpp  Worker.h  WorkerTask.cpp  WorkerTask.h  a.out  features-missing.md  functions.cpp  functions.h  main.cpp  main_thread.cpp  re.cpp  roles.cpp  roles.h  utils.h  waittree.cpp  waittree.h  worker.cpp
runtime-old/: CMakeLists.txt  Runtime.cpp  RuntimeTask.h  Worker.cpp  Worker.h  WorkerTask.cpp  defaults.h  main.cpp  utils.h
runtime/include/: tasking.h
runtime/src/: Receiver.cpp  Receiver.h  Runtime.cpp  Runtime.h  Scheduler.cpp  Scheduler.h  Task.cpp  Task.h  Worker.cpp  Worker.h  constants.h  functions.h  globaldef.cpp  globals.h  utils.h
runtime/test/: create_task.cpp  helper.h  main_task.cpp  multi_worker_capa_1.cpp  one_task.cpp  run_main.cpp  run_many.cpp  setup.cpp  test_Task.cpp
samples/: barcelona-test-suite.build
test/: CMakeLists.txt  main_task.cpp  simple.cpp
